--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   deploy:
     name: Deploy to EC2 on master branch push
-    runs-on: Call4HelpImage
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the files
         uses: actions/checkout@v2
